--- a/demo.html
+++ b/demo.html
@@ -18,7 +18,7 @@
         }
 
         input-ripple {
-            background: #eee;
+            /*background: #eee;*/
             border-radius: 6px;
         }
         .container {
