--- a/input-ripple.html
+++ b/input-ripple.html
@@ -4,7 +4,7 @@ Element providing a ripple on focussing an input box.
 
 ##### Example
 
-<input-ripple></input-ripple>
+    <input-ripple></input-ripple>
 
 @element input-ripple
 @blurb Element providing a ripple on focussing an input box.
@@ -15,61 +15,95 @@ Element providing a ripple on focussing an input box.
 
 <link href="../polymer/polymer.html" rel="import">
 <link href="../core-input/core-input.html" rel="import">
+<link href="../paper-ripple/paper-ripple.html" rel="import">
 
 
-<polymer-element extends="core-input" name="input-ripple" attributes="label">
+<polymer-element extends="core-input" name="input-ripple" attributes="label" on-down="{{downAction}}" on-up="{{upAction}}">
 
     <template>
 
         <link rel="stylesheet" href="input-ripple.css" />
 
-        <div class="container">
-            <span class="label">{{ label }}</span>
+        <div id="container">
+            <template if="{{label}}">
+                <span id="label">{{ label }}</span>
+            </template>
             <shadow></shadow>
         </div>
-
+        <paper-ripple id="ripple" fit></paper-ripple>
 
     </template>
 
 <script>
 
-Polymer('input-ripple', {
-  /**
-   * The `noevent` event is not actually fired from here,
-   * we document it as an example of documenting events.
-   *
-   * @event noevent
-   */
+Polymer( 'input-ripple', {
+    /**
+     * The `noevent` event is not actually fired from here,
+     * we document it as an example of documenting events.
+     *
+     * @event noevent
+     */
 
-  /**
-   * The `notitle` attribute does not yet have a purpose.
-   *
-   * @attribute notitle
-   * @type string
-   */
-  label: '',
+    /**
+     * The `notitle` attribute does not yet have a purpose.
+     *
+     * @attribute notitle
+     * @type string
+     */
+    label: '',
 
-  /**
-   * The `aProp` is a property that does something cool.
-   *
-   * @property aProp
-   * @type bool
-   */
-  aProp: false,
+    /**
+     * The `aProp` is a property that does something cool.
+     *
+     * @property aProp
+     * @type bool
+     */
+    aProp: false,
 
-  ready: function() {
-      this.super();
-  },
 
-  /**
-   * The `task` method does no work at this time.
-   *
-   * @method task
-   * @return {Object} Returns undefined.
-   * @param {String} dummy Serves no purpose today.
-   */
-  task: function(dummy) {
-  }
+    // eventDelegates: {
+    //     down: 'downAction',
+    //     up: 'upAction'
+    // },
+
+
+    ready: function() {
+        this.super();
+    },
+
+    /**
+     * The `task` method does no work at this time.
+     *
+     * @method task
+     * @return {Object} Returns undefined.
+     * @param {String} dummy Serves no purpose today.
+     */
+    task: function(dummy) {
+    },
+
+
+    /**
+     * Fired when the input changes
+     */
+    inputValueChanged: function() {
+        this.super();
+
+        this.$.label.classList.toggle( 'hidden', this.inputValue );
+    },
+
+
+    downAction: function( e ) {
+        this.$.ripple.downAction({
+            x: e.x,
+            y: e.y
+        });
+    },
+
+    upAction: function( e ) {
+        console.log( 'up' );
+        this.$.ripple.upAction();
+    }
+
 
 });
 
