--- a/demo.html
+++ b/demo.html
@@ -17,6 +17,10 @@
             padding: 20px;
         }
 
+        p {
+            margin-top: 0;
+        }
+
         input-ripple {
             /*background: #eee;*/
             border-radius: 6px;
@@ -25,17 +29,23 @@
             display: block;
             margin: 2em 0;
         }
+
+        #basic input-ripple {
+            background: #f4f4f4;
+        }
     </style>
 </head>
 <body unresolved>
 
     <p>An `input-ripple` looks like this:</p>
 
-    <div class="container">
+    <div id="basic" class="container">
         <input-ripple></input-ripple>
     </div>
 
-    <div class="container">
+    <p>With placeholder attribute set:</p>
+
+    <div id="placeholder" class="container">
         <input-ripple label="placeholder text"></input-ripple>
     </div>
 
