#fix - only toggle class on label if label exists

--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,8 @@
         body {
             font: 16px/1.33em 'Helvetica Neue', 'Helvetica', 'Lucida Grande', 'Tahoma', sans-serif;
             font-weight: 300;
-            color: #444;
+            /*color: #444;*/
+            color: #f8c;
             -webkit-font-smoothing: antialiased;
             margin: 0;
             padding: 20px;
@@ -32,6 +33,9 @@
 
         #basic input-ripple {
             background: #f4f4f4;
+        }
+        #basic input-ripple:host /deep/ input {
+            color: #46c;
         }
     </style>
 </head>
