#add - text centering

--- a/demo.html
+++ b/demo.html
@@ -76,7 +76,7 @@
         <input-ripple></input-ripple>
     </div>
 
-    <h2>With placeholder attribute set:</h2>
+    <h2>With <code>placeholder</code> attribute set</h2>
     <div id="placeholder" class="container">
         <input-ripple label="placeholder text"></input-ripple>
     </div>
@@ -90,6 +90,11 @@
     <h2><code>rippleColor</code> attribute colors just the ripple</h2>
     <div id="ripple-color" class="container">
         <input-ripple label="placeholder text" rippleColor="#22a7f0"></input-ripple>
+    </div>
+
+    <h2><code>center</code> attribute will center the text</h2>
+    <div id="center" class="container">
+        <input-ripple label="placeholder text" center></input-ripple>
     </div>
 
 </body>
