--- a/input-ripple.html
+++ b/input-ripple.html
@@ -18,7 +18,7 @@ Element providing a ripple on focussing an input box.
 <link href="../paper-ripple/paper-ripple.html" rel="import">
 
 
-<polymer-element extends="core-input" name="input-ripple" attributes="label rippleColor">
+<polymer-element extends="core-input" name="input-ripple" attributes="label rippleColor center">
 
     <template>
 
@@ -26,7 +26,7 @@ Element providing a ripple on focussing an input box.
 
         <div id="container">
             <template if="{{ label }}">
-                <span id="label">{{ label }}</span>
+                <span id="label" class="fit">{{ label }}</span>
             </template>
             <shadow></shadow>
         </div>
@@ -37,6 +37,8 @@ Element providing a ripple on focussing an input box.
 <script>
 
 Polymer( 'input-ripple', {
+
+    center: false,
 
 
     /**
@@ -56,6 +58,10 @@ Polymer( 'input-ripple', {
 
         if ( this.rippleColor ) {
             this.$.ripple.style.color = ( /^\#/.test( this.rippleColor ) ? '' : '' ) + this.rippleColor;
+        }
+
+        if ( this.center ) {
+            this.classList.add( 'center' );
         }
     },
 
