--- a/demo.html
+++ b/demo.html
@@ -97,5 +97,10 @@
         <input-ripple label="placeholder text" center></input-ripple>
     </div>
 
+    <h2>Entering a password? No problem</h2>
+    <div id="password" class="container">
+        <input-ripple label="placeholder text" password></input-ripple>
+    </div>
+
 </body>
 </html>
