--- a/demo.html
+++ b/demo.html
@@ -9,18 +9,19 @@
 
     <style media="screen">
         body {
-            font: 16px/1.33em 'Helvetica Neue', 'Helvetica', 'Lucida Grande', 'Tahoma', sans-serif;
+            font: 15px/1.33em 'Helvetica Neue', 'Helvetica', 'Lucida Grande', 'Tahoma', sans-serif;
             font-weight: 300;
             color: #444;
             -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
             margin: 0;
-            padding: 20px;
+            padding: 30px;
         }
 
         h2 {
             margin-top: 2em;
             margin-bottom: 1em;
-            font-size: 1.42em;
+            font-size: 1.3em;
             font-weight: 300;
             color: #333;
         }
@@ -36,7 +37,7 @@
 
         p {
             margin-top: .5em;
-            font-size: .85em;
+            font-size: 1em;
             font-weight: 400;
         }
 
