--- a/urban-input.html
+++ b/urban-input.html
@@ -23,6 +23,7 @@ Element providing a ripple on focussing an input box.
         <link rel="stylesheet" href="urban-input.css" />
 
         <div id="container">
+            <content></content>
             <template if="{{ label }}">
                 <span id="label" class="fit">{{ label }}</span>
             </template>
