#add - icon attribute

--- a/demo.html
+++ b/demo.html
@@ -110,7 +110,7 @@
 
     <h2>Want to add an <code>icon</code>? Go ahead</h2>
     <div id="icon" class="container">
-        <urban-input class="icon" label="placeholder text"><core-icon icon="urban:attention"></core-icon></urban-input>
+        <urban-input icon="urban:attention" label="placeholder text"></urban-input>
     </div>
 
 </body>
